--- a/The Project/pages/profile.html
+++ b/The Project/pages/profile.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Workspace | Rabt</title>
+    <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -119,6 +119,7 @@
         </div>
         <!-- /.container -->
     </nav>
+
     <!-- Page Content -->
     <div class="container">
 
@@ -142,11 +143,11 @@
             <!-- Sidebar Column -->
             <div class="col-md-3">
                 <div class="list-group">
-                    <a href="index.html" class="list-group-item">Rabt Homepage</a>
+                    <a href="index.html" class="list-group-item">Home</a>
                     <a href="about.html" class="list-group-item">About</a>
-                    <a href="myprojects.html" class="list-group-item">My Projects</a>
+                    <a href="services.html" class="list-group-item">Services</a>
                     <a href="contact.html" class="list-group-item">Contact</a>
-                    <!-- <a href="portfolio-1-col.html" class="list-group-item">1 Column Portfolio</a>
+                    <a href="portfolio-1-col.html" class="list-group-item">1 Column Portfolio</a>
                     <a href="portfolio-2-col.html" class="list-group-item">2 Column Portfolio</a>
                     <a href="portfolio-3-col.html" class="list-group-item">3 Column Portfolio</a>
                     <a href="portfolio-4-col.html" class="list-group-item">4 Column Portfolio</a>
@@ -155,10 +156,10 @@
                     <a href="blog-home-2.html" class="list-group-item">Blog Home 2</a>
                     <a href="blog-post.html" class="list-group-item">Blog Post</a>
                     <a href="full-width.html" class="list-group-item">Full Width Page</a>
-                    <a href="sidebar.html" class="list-group-item active">Sidebar Page</a> -->
+                    <a href="sidebar.html" class="list-group-item active">Sidebar Page</a>
                     <a href="faq.html" class="list-group-item">FAQ</a>
-                    <!-- <a href="404.html" class="list-group-item">404</a>
-                    <a href="pricing.html" class="list-group-item">Pricing Table</a> -->
+                    <a href="404.html" class="list-group-item">404</a>
+                    <a href="pricing.html" class="list-group-item">Pricing Table</a>
                 </div>
             </div>
             <!-- Content Column -->
